force-app/main/default/objects/Knowledge__kav/fields/Chat_Bot_URL__c.field-meta.xml
<CustomField>
    <fullName>Chat_Bot_URL__c</fullName>
    <defaultValue>&quot;https://sandbox-java-app-59782-dev-ed-17687326f48.cs1.force.com/s/article/&quot;</defaultValue>
    <description>URL used by Admissions Chatbot to redirect users to a complete articles site.</description>
    <inlineHelpText>URL used by Admissions Chatbot to redirect users to a complete articles site.
This can be a Community or another full URL.</inlineHelpText>
    <label>Chat Bot URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>