force-app/main/default/objects/Knowledge__kav/fields/Chatbot_URL__c.field-meta.xml
<CustomField>
    <fullName>Chatbot_URL__c</fullName>
    <defaultValue>&quot;https://[Experience URL goes here]/[Experience Name goes here]/s/article/[Knowledge URL]&quot;</defaultValue>
    <description>URL used by Admissions Chatbot to redirect users to a complete articles site.</description>
    <inlineHelpText>URL used by Admissions Chatbot to redirect users to a complete articles site.
This can be a Community or another full URL.</inlineHelpText>
    <label>Chatbot URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>