force-app/main/default/objects/Knowledge__kav/fields/Community_URL__c.field-meta.xml
<CustomField>
    <fullName>Community_URL__c</fullName>
    <defaultValue>&quot;https://sandbox-java-app-59782-dev-ed-17687326f48.cs1.force.com/s/article/&quot;</defaultValue>
    <description>URL used by Admissions Chatbot in conjunction with KA URL to link users to articles</description>
    <label>Community URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>