force-app/main/default/objects/Knowledge__kav/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <label>Details</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>