force-app/main/default/objects/Knowledge__kav/recordTypes/Chat_Bot_Articles.recordType-meta.xml
<RecordType>
    <fullName>Chat_Bot_Articles</fullName>
    <active>true</active>
    <description>Used to surface Articles in the Education Chatbot</description>
    <label>Chat Bot Articles</label>
</RecordType>