force-app/main/default/objects/Knowledge__kav/recordTypes/Chatbot_Articles.recordType-meta.xml
<RecordType>
    <fullName>Chatbot_Articles</fullName>
    <active>true</active>
    <description>An article used by education chatbots.</description>
    <label>Chatbot Articles</label>
</RecordType>